src/objects/Banana_Farmer__c.object
<CustomObject>
    <fields>
        <fullName>Types_Of_Records_Kept_on_Banana__c</fullName>
        <description>What kind of records do you keep on Banana</description>
        <inlineHelpText>What kind of records do you keep on Banana</inlineHelpText>
        <label>Types of Records Kept on Banana</label>
        <picklist>
            <picklistValues>
                <fullName>Production records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Farm planning records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Types_of_Mgt_Biz_Practices_last_2_yrs__c</fullName>
        <description>What types of management and business practices have you engaged in over the past 2 years?</description>
        <inlineHelpText>What types of management and business practices have you engaged in over the past 2 years?</inlineHelpText>
        <label>Types of Mgt &amp; Biz Practices last 2 yrs</label>
        <picklist>
            <picklistValues>
                <fullName>Planning with the cropping calendar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Measurement of farm size</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Animal raising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adoption of new crops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use of improved seeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use of chemical fertilizer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recording money in – money out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial calendar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replanting of Banana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None of the above</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Used_Sufficient_Fertilizer_last_12_month__c</fullName>
        <description>In the last 12 months, was the amount of fertilizer(s) that you used sufficient for your banana plantation needs?</description>
        <label>Used Sufficient Fertilizer last 12 month</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Used_sufficient_herbicides_last_12_month__c</fullName>
        <description>In the last 12 months, was the amount of herbicide(s) that you used sufficient for your Banana farm needs?</description>
        <inlineHelpText>In the last 12 months, was the amount of herbicide(s) that you used sufficient for your Banana farm needs?</inlineHelpText>
        <label>Used sufficient herbicides last 12 month</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Used_sufficient_pesticides_last_12_month__c</fullName>
        <description>In the last 12 months, was the amount of pesticides that you used sufficient for your Banana farm needs</description>
        <inlineHelpText>In the last 12 months, was the amount of pesticides that you used sufficient for your Banana farm needs</inlineHelpText>
        <label>Used sufficient pesticides last 12 month</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Usefulness_of_Farm_Info_from_SMS_Mobile__c</fullName>
        <description>Using a scale from very useful to not at all useful, how useful do you or anyone in your household find the information that you get about farming related matters from SMS subscription service/ mobile phone?</description>
        <inlineHelpText>Using a scale from very useful to not at all useful, how useful do you or anyone in your household find the information that you get about farming related matters from SMS subscription service/ mobile phone?</inlineHelpText>
        <label>Usefulness of Farm Info from SMS/Mobile</label>
        <picklist>
            <picklistValues>
                <fullName>Very useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not very useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not at all useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don’t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Usefulness_of_Farming_Info_on_Radio__c</fullName>
        <description>Using a scale from very useful to not at all useful, how useful do you or anyone in your household find the information that you get about farming related matters from the Radios?</description>
        <inlineHelpText>Using a scale from very useful to not at all useful, how useful do you or anyone in your household find the information that you get about farming related matters from the Radios?</inlineHelpText>
        <label>Usefulness of Farming Info on Radio</label>
        <picklist>
            <picklistValues>
                <fullName>Very useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not very useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not at all useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don’t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Usefulness_of_Farming_Info_on_TV__c</fullName>
        <description>Using a scale from very useful to not at all useful, how useful do you or anyone in your household find the information that you get about farming related matters from the TV?</description>
        <inlineHelpText>Using a scale from very useful to not at all useful, how useful do you or anyone in your household find the information that you get about farming related matters from the TV?</inlineHelpText>
        <label>Usefulness of Farming Info on TV</label>
        <picklist>
            <picklistValues>
                <fullName>Very useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not very useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not at all useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don’t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Usefulness_of_Info_from_Buyers_Traders__c</fullName>
        <description>Using a scale from very useful to not at all useful, how useful do you or anyone in your household find the information that you get about farming related matters from Buyers/Traders?</description>
        <inlineHelpText>Using a scale from very useful to not at all useful, how useful do you or anyone in your household find the information that you get about farming related matters from Buyers/Traders?</inlineHelpText>
        <label>Usefulness of Info from Buyers/Traders</label>
        <picklist>
            <picklistValues>
                <fullName>Very useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not very useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not at all useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don’t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Usefulness_of_Info_from_CKWs__c</fullName>
        <description>Using a scale from very useful to not at all useful, how useful do you or anyone in your household find the information that you get about farming related matters from the CKWs?</description>
        <inlineHelpText>Using a scale from very useful to not at all useful, how useful do you or anyone in your household find the information that you get about farming related matters from the CKWs?</inlineHelpText>
        <label>Usefulness of Farming Info from CKWs</label>
        <picklist>
            <picklistValues>
                <fullName>Very useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not very useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not at all useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don’t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Usefulness_of_Info_from_Extension_Agents__c</fullName>
        <description>Using a scale from very useful to not at all useful, how useful do you or anyone in your household find the information that you get about farming related matters from the Agriculture extension agents like from NAADs, NARO etc.</description>
        <inlineHelpText>Using a scale from very useful to not at all useful, how useful do you or anyone in your household find the information that you get about farming related matters from the Agriculture extension agents like from NAADs, NARO etc.</inlineHelpText>
        <label>Usefulness of Info from Extension Agents</label>
        <picklist>
            <picklistValues>
                <fullName>Very useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not very useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not at all useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don’t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Usefulness_of_Info_from_Farmer_Group__c</fullName>
        <description>Using a scale from very useful to not at all useful, how useful do you or anyone in your household find the information that you get about farming related matters from Farmer Group or Association?</description>
        <inlineHelpText>Using a scale from very useful to not at all useful, how useful do you or anyone in your household find the information that you get about farming related matters from Farmer Group or Association?</inlineHelpText>
        <label>Usefulness of Info from Farmer Group</label>
        <picklist>
            <picklistValues>
                <fullName>Very useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not very useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not at all useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don’t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Usefulness_of_Info_from_GF_Call_Centre__c</fullName>
        <description>Using a scale from very useful to not at all useful, how useful do you or anyone in your household find the information that you get about farming related matters from the GF farmer call center</description>
        <inlineHelpText>Using a scale from very useful to not at all useful, how useful do you or anyone in your household find the information that you get about farming related matters from the GF farmer call center</inlineHelpText>
        <label>Usefulness of Info from GF Call Centre</label>
        <picklist>
            <picklistValues>
                <fullName>Very useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not very useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not at all useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don’t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Uses_a_seasonal_method_of_weed_control__c</fullName>
        <description>Do you use a particular method of weed control based on the seasons? That is during the dry or rainy season</description>
        <inlineHelpText>Do you use a particular method of weed control based on the seasons? That is during the dry or rainy season</inlineHelpText>
        <label>Uses a seasonal method of weed control?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Uses_protective_gear_to_apply_herbicide__c</fullName>
        <description>Do you use protective gear (e.g. gumboots, masks, gloves, glasses etc.) while applying herbicides</description>
        <inlineHelpText>Do you use protective gear (e.g. gumboots, masks, gloves, glasses etc.) while applying herbicides</inlineHelpText>
        <label>Uses protective gear to apply herbicide</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Want_to_receive_Farming_Info_SMS_Alerts__c</fullName>
        <description>Would you like to received free SMS alerts on the selected practices such as market prices and farming tips</description>
        <inlineHelpText>Would you like to received free SMS alerts on the selected practices such as market prices and farming tips</inlineHelpText>
        <label>Want to receive Farming Info SMS Alerts</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>What_form_of_value_addition_do_you_do__c</fullName>
        <description>What form of value addition do you do</description>
        <inlineHelpText>What form of value addition do you do</inlineHelpText>
        <label>What form of value addition do you do?</label>
        <picklist>
            <picklistValues>
                <fullName>Banana wine making</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banana crisps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banana flour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pan cakes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>When_do_you_weed_your_Banana_plantation__c</fullName>
        <description>When do you weed your Banana plantation (s)</description>
        <inlineHelpText>When do you weed your Banana plantation (s)</inlineHelpText>
        <label>When do you weed your Banana plantation?</label>
        <picklist>
            <picklistValues>
                <fullName>During the dry season</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>During the rainy season</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>When weeds are too many</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>When_normally_support_banana_plants__c</fullName>
        <description>When do you normally provide support to your banana plants</description>
        <inlineHelpText>When do you normally provide support to your banana plants</inlineHelpText>
        <label>When normally support banana plants</label>
        <picklist>
            <picklistValues>
                <fullName>When plant has bigger bunches</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>When plant is attacked by pests</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>When plant has too much leaves</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>During the rainy season</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>During the dry season</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Where_did_you_obtain_the_Banana_suckers__c</fullName>
        <description>Where did you obtain the Banana suckers</description>
        <inlineHelpText>Where did you obtain the Banana suckers</inlineHelpText>
        <label>Where did you obtain the Banana suckers</label>
        <picklist>
            <picklistValues>
                <fullName>Own farm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neighbors farm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government (NAADs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research institutes (NARO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Where_production_mkting_decisions_kept__c</fullName>
        <description>Where do you keep all your Banana production and marketing decisions</description>
        <inlineHelpText>Where do you keep all your Banana production and marketing decisions</inlineHelpText>
        <label>Where production &amp; mkting decisions kept</label>
        <picklist>
            <picklistValues>
                <fullName>Book/chart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Memory/Head</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On paper sheets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Banana Farmer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BF{YYYY}{MM}{DD}{0}</displayFormat>
        <label>Farmer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Banana Farmers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>